Disable default proxy in Web.config

--- a/ServiciosInter/Servidor/Servicios/Servidor.Servicios.Web/Web.config
+++ b/ServiciosInter/Servidor/Servicios/Servidor.Servicios.Web/Web.config
@@ -126,7 +126,7 @@
     <!--<add name="Sispostal"        connectionString="Server=172.20.10.9,1430;initial catalog=db_Sispostal; user id=UsrSQLSispostal;Password=Inter515p0stal2014*.;multipleactiveresultsets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <system.net>
-    <defaultProxy enabled="true" useDefaultCredentials="true"/>
+    <defaultProxy enabled="false"/>
   </system.net>
   <system.diagnostics>
     <switches>
