--- a/ServiciosInter/SatrackTest/App.config
+++ b/ServiciosInter/SatrackTest/App.config
@@ -113,7 +113,7 @@
     </client>
   </system.serviceModel>
   <system.net>
-    <defaultProxy enabled="true" useDefaultCredentials="true">
+    <defaultProxy enabled="false">
     </defaultProxy>
   </system.net>
 </configuration>
