Disable default proxy in app.config

--- a/ServiciosInter/Servidor/Integraciones/CO.Servidor.Integraciones/app.config
+++ b/ServiciosInter/Servidor/Integraciones/CO.Servidor.Integraciones/app.config
@@ -57,7 +57,7 @@
     </client>
   </system.serviceModel>
   <system.net>
-    <defaultProxy enabled="true" useDefaultCredentials="true">
+    <defaultProxy enabled="false">
     </defaultProxy>
   </system.net>
 </configuration>
